--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,147 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="{{ asset('assets/css/base.css') }}" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
         {% block stylesheets %}
         {% endblock %}
+</head>
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
+<body>
+  <header>
+    <!-- NAVBAR -->
+
+    <nav class=" navbar navbar-expand-lg ">
+      <div id="logo" class="container-fluid">
+  <a href="{{ path('app') }}">
+        <img src={{ asset('assets/img/logo/logo.png') }} alt="AC LOGO" width="150px"/>
+</a>
+
+        <!-- LINKS ITEMS -->
+
+        <ul id="links" class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 300px;">
+          <li><a href="{{ path('app') }}" class="active text-decoration-none d-flex justify-content-center">Accueil</a></li>
+          <li><a class=" text-decoration-none d-flex justify-content-center" href="{{ path('app_cars_achat')}}">Achat</a></li>
+          <li><a class=" text-decoration-none d-flex justify-content-center" href="{{ path('app_cars_vente') }}">Vente</a></li>
+          <li><a class="  text-decoration-none d-flex justify-content-center" href="#">Comment ça marche</a></li>
+          <li><a class="text-decoration-none d-flex justify-content-center" href="#">Contact</a></li>
+        </ul>
+
+
+        <!-- MENU BURGER -->
+        <button id="burger" class="hide-burger" onclick="toggleMenu()"> <i class=" fa-solid fa-bars"></i>
+        </button>
+       
+        <ul id="menu">
+          <li><a href="{{ path('app') }}" class="active text-decoration-none d-flex justify-content-center">Accueil</a></li>
+          <li><a class=" text-decoration-none d-flex justify-content-center" href="{{ path('app_cars_achat')}}">Achat</a></li>
+          <li><a class=" text-decoration-none d-flex justify-content-center" href="{{ path('app_cars_vente') }}">Vente</a></li>
+          <li><a class="  text-decoration-none d-flex justify-content-center" href="#">Forum</a></li>
+          <li><a class="text-decoration-none d-flex justify-content-center" href="#">Contact</a></li>
+          <a id="user" href="#"> <i id="connect" class=" fa fa-user"></i>Connexion </a>
+          <a id="user" href="#"> <i id="connect" class=" fa fa-user-plus"></i>Inscription </a>
+        </ul>
+
+        <ul id="buttons" class="navbar-nav me-auto my-lg-0 navbar-nav-scroll">
+          <a id="user" href="#"> <i id="connect" class=" fa fa-user"></i>Connexion </a>
+          <a href="#" id="register"> <i id="connect" class=" fa fa-user-plus"></i>Inscription </a>
+        </ul>
+     
+     </div>
+ </nav>
+  </header>
+  
         {% block body %}{% endblock %}
+
+
+
+
+<footer>
+<div class="footer">
+  <div class="contain">
+  <div class="col">
+    <h2>Accueil</h2>
+    <ul class="links">
+            <li><a href="{{ path('app') }}">Accueil</a></li>
+            <li><a href="{{ path('app_cars_achat') }}">Achat</a></li>
+            <li><a href="{{ path('app_cars_vente') }}">Vente</a></li>
+            <li><a href="#">Comment ça marche</a></li>
+            <li><a href="#">Contact</a></li>
+  </div>
+  <div class="col">
+    <h2>Achat</h2>
+    <ul class="links">
+      <li><a href="#">4x4 & SUV</a></li>
+      <li><a href="#">Citadine</a></li>
+      <li><a href="#">Berline</a></li>
+      <li><a href="#">Break</a></li> 
+      <li><a href="#">Monospace</a></li>
+      <li><a href="#">Hybride</a></li>
+      <li><a href="#">Electrique</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <h2> Vente</h2>
+  
+   <a class="child" href="#"> Vente </a>
+  </div>
+  <div class="col">
+    <h2>Comment ça marche</h2>
+    <ul class="links">
+      <li><a href="#">Garantie</a></li>
+      <li><a href="#">Sérénitée</a></li>
+      <li><a href="#">Livraison</a></li>
+      <li><a href="#">Choix</a></li>
+      <li><a href="#">Vente en ligne</a></li>
+      <li><a href="#">Engagements</a></li>
+      
+    </ul>
+  </div>
+  <div class="col">
+    <h2>Contact</h2>
+    <ul class="links">
+      <li><a href="mailto:test@test.fr">Email</a></li>
+      <li><a href="phone:+33612345678">Téléphone</a></li>
+    </ul>
+  </div>
+  <div class="col social">
+    <h2>Social</h2>
+    
+    <ul class="links">
+      <li>
+      <a href="#">
+     <i class="fa-brands fa-facebook-f"></i>
+      </a>
+      </li>
+      <li>
+      <a href="#">
+   <i class="fa-brands fa-twitter"></i>
+      </a>
+      </li>
+      <li>
+      <a href="#">
+      <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+      </li>
+    </ul>
+  </div>
+<hr>
+<p class="text-white pt-3 pb-3">Copyright &copy; L’équipe AutoCars - Tous droits réservés</p>
+</div>
+</footer>
+
+         <script src={{asset('assets/js/base.js')}}></script>
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                 crossorigin="anonymous"></script>
     </body>
 </html>
+ 
