--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,11 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
+  
   <link href="{{ asset('assets/css/base.css') }}" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
 
 
         {% block stylesheets %}
@@ -43,12 +51,12 @@
             <li><a class=" text-decoration-none d-flex justify-content-center" href="{{ path('app_cars_vente') }}">Vente</a></li>
             <li><a class=" text-decoration-none d-flex justify-content-center" href="#">Comment ça marche</a></li>
             <li><a class="text-decoration-none d-flex justify-content-center" href="#">Contact</a></li>
-            <a id="user" href="{{ path('app_login')}}"> <i id="connect" class=" fa fa-user"></i>Connexion </a>
-            <a id="user" href="{{ path('app_register')}}"> <i id="connect" class=" fa fa-user-plus"></i>Inscription </a>
+            <a id="user" href="{{ path('app_login')}}">Connexion </a>
+            <a id="user" href="{{ path('app_register')}}">Inscription</a>
           </ul>
           <ul id="buttons" class="navbar-nav me-auto my-lg-0 navbar-nav-scroll">
-            <a id="user" href="{{ path('app_login')}}"> <i id="connect" class=" fa fa-user"></i>Connexion </a>
-            <a href="{{ path('app_register')}}" id="register"> <i id="connect" class=" fa fa-user-plus"></i>Inscription </a>
+            <a id="user" href="{{ path('app_login')}}">Connexion </a>
+            <a href="{{ path('app_register')}}" id="register">Inscription </a>
           </ul>
 
           </div>
@@ -61,101 +69,118 @@
   </main>
 
 
-      <footer>
-        <div class="footer">
-          <div class="contain">
+<footer>
+    <div class="footer">
+        <div class="contain">
             <div class="col">
-              <h2>Accueil</h2>
-              <ul class="links">
-                      <li><a href="{{ path('app') }}">Accueil</a></li>
-                      <li><a href="{{ path('app_cars_achat') }}">Achat</a></li>
-                      <li><a href="{{ path('app_cars_vente') }}">Vente</a></li>
-                      <li><a href="#">Comment ça marche</a></li>
-                      <li><a href="#">Contact</a></li>
-              </ul>
+                <h2>Accueil</h2>
+                <ul class="links">
+                    <li><a href="{{ path('app') }}">Accueil</a></li>
+                    <li><a href="{{ path('app_cars_achat') }}">Achat</a></li>
+                    <li><a href="{{ path('app_cars_vente') }}">Vente</a></li>
+                    <li><a href="#">Comment ça marche</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </div>
             <div class="col">
-              <h2>Achat</h2>
-              <ul class="links">
-                <li><a href="#">4x4 & SUV</a></li>
-                <li><a href="#">Citadine</a></li>
-                <li><a href="#">Berline</a></li>
-                <li><a href="#">Break</a></li> 
-                <li><a href="#">Monospace</a></li>
-                <li><a href="#">Hybride</a></li>
-                <li><a href="#">Electrique</a></li>
-              </ul>
+                <h2>Achat</h2>
+                <ul class="links">
+                    <li><a href="#">4x4 & SUV</a></li>
+                    <li><a href="#">Citadine</a></li>
+                    <li><a href="#">Berline</a></li>
+                    <li><a href="#">Break</a></li>
+                    <li><a href="#">Monospace</a></li>
+                    <li><a href="#">Hybride</a></li>
+                    <li><a href="#">Electrique</a></li>
+                </ul>
             </div>
             <div class="col">
-            <h2> Vente</h2>
-            <a class="child" href="#"> Vente </a>
+                <h2>Vente</h2>
+                <a class="child" href="#">Vente</a>
             </div>
             <div class="col howItWorks">
-            <h2>Comment ça marche</h2>
-            <ul class="links">
-              <li><a href="#">Garantie</a></li>
-              <li><a href="#">Sérénitée</a></li>
-              <li><a href="#">Livraison</a></li>
-              <li><a href="#">Choix</a></li>
-              <li><a href="#">Vente en ligne</a></li>
-              <li><a href="#">Engagements</a></li>
-              
-            </ul>
+                <h2>Comment ça marche</h2>
+                <ul class="links">
+                    <li><a href="#">Garantie</a></li>
+                    <li><a href="#">Sérénitée</a></li>
+                    <li><a href="#">Livraison</a></li>
+                    <li><a href="#">Choix</a></li>
+                    <li><a href="#">Vente en ligne</a></li>
+                    <li><a href="#">Engagements</a></li>
+                </ul>
             </div>
 
             <div class="col">
-            <h2>Contact</h2>
-            <ul class="links">
-              <li><a href="mailto:test@test.fr">Email</a></li>
-              <li><a href="phone:+33612345678">Téléphone</a></li>
-            </ul>
+                <h2>Contact</h2>
+                <ul class="links">
+                    <li><a href="mailto:test@test.fr">Email</a></li>
+                    <li><a href="phone:+33612345678">Téléphone</a></li>
+                </ul>
             </div>
 
-            <hr>  
+            <hr>
 
-            <div id="charters" class="cols-footer h-100 gap-5 ps-5 d-flex ">
-              <h2><a href="#">Charte cookies</a></h2>
-              <h2><a href="#">Mentions légales</a></h2>
-              <h2><a href="#">Politique de confidentialité</a></h2>
-              <h2><a href="#">CGU</a></h2>
-            
+            <div id="charters" class="cols-footer h-100 gap-5 ps-5 pe-5 d-flex ">
+                <h2><a href="#">Charte cookies</a></h2>
+                <h2><a href="#">Mentions légales</a></h2>
+                <h2><a href="#">Politique de confidentialité</a></h2>
+                <h2><a href="#">CGU</a></h2>
 
-              <div class="social list-socials ">
+                <div class="social list-socials ">
 
-                  <ul class="links d-flex gap-3 pe-5 justify-content-end">
-                      <li>
-                      <a href="#">
-                    <i class="fa-brands fa-facebook-f"></i>
-                      </a>
-                      </li>
-                      <li>
-                      <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
-                      </a>
-                      </li>
-                      <li>
-                      <a href="#">
-                      <i class="fa-brands fa-linkedin-in"></i>
-                      </a>
-                      </li>
-                  </ul>
+                    <ul class="links d-flex gap-3 pe-5 justify-content-end">
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                    </ul>
 
-              
-              </div>
-            </div> 
+
+                </div>
+            </div>
 
             <div id="copyright" class="">
-              <p id="copyright" class="mt-3 text-center text-white">Copyright &copy; L’équipe AutoCars - Tous droits réservés</p>
-            </div> 
-          </div>
+                <p id="copyright" class="mt-3 fs-6 text-center text-white">
+                    Copyright &copy; L’équipe AutoCars - Tous droits réservés
+                </p>
+            </div>
         </div>
+    </div>
 
-      </footer>
+</footer>
 
+
+     
          <script src={{asset('assets/js/base.js')}}></script>
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-YvpcrYf0Y3lHB60NNkmXc5s9fDVZLESaAA5NDzOxhy9GkcIdslK1eN7N6jIez"
          crossorigin="anonymous"></script> 
+  <script>
+function toggleMenu() {
+    // const close = document.getElementById('close');
+    const burger = document.getElementById('burger');
+    const menu = document.getElementById('menu');
+    menu.classList.toggle('active');
+    burger.classList.toggle('hide-burger');
+  }
+</script>
+
+
+  
+
+        {% block javascripts %}{% endblock %}
+
 </body>
 </html>
  
