--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,15 +13,11 @@
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        {% block stylesheets %}{% endblock %}
 
-
-
-        {% block stylesheets %}
-        {% endblock %}
+       
 </head>
 
 <body>
@@ -179,7 +175,6 @@ function toggleMenu() {
 
   
 
-        {% block javascripts %}{% endblock %}
 
 </body>
 </html>
