--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -18,13 +18,13 @@
 		<form action="{{ path('app_cars_achat') }}" method="POST">
 			<div class="d-flex justify-content-center">
 				<div class="form-group">
-					<input type="text" id="typeBrandModelInput" name="typeBrandModel" placeholder="Type, marque, modèle"/>
+				<input type="text" id="typeBrandModelInput" name="typeBrandModel" placeholder="Type, marque, modèle"/>
 				</div>
 				<div class="form-group">
-					<input type="number" id="kmMaxInput" name="km" placeholder="KM max"/>
+				<input type="number" id="mileage" name="mileage" placeholder="Km"/>
 				</div>
 				<div class="form-group">
-					<input type="number" id="priceInput" name="price" placeholder="Prix maximum"/>
+				<input type="number" id="price" name="price" placeholder="Prix"/>
 				</div>
 			</div>
 
@@ -243,8 +243,7 @@
 				   });
 			</script>
 
-			<script>
-				
+	
 			</script>
 
 
