--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -20,16 +20,16 @@
                
         {{ form_start(form) }}
             <div>
-                {{ form_label(form.email, 'E-mail', {'label_attr': {'class': 'block mb-2 text-sm font-medium'}}) }}
-                {{ form_widget(form.email, {'attr': {'class': 'shadow-sm border border-gray-300 text-sm rounded-lg block w-full p-2.5', 'required': true}}) }}
+            {{ form_label(form.email, 'E-mail', {'label_attr': {'class': 'block mb-2 text-sm font-medium mx-2'}}) }}
+            {{ form_widget(form.email, {'attr': {'class': 'shadow-sm border border-gray-300 text-sm rounded-lg block w-full p-2.5', 'required': true}}) }}
             </div>
             <div>
-                {{ form_label(form.subject, 'Objet', {'label_attr': {'class': 'block mb-2 text-sm font-medium'}}) }}
-                {{ form_widget(form.subject, {'attr': {'class': 'block p-3 w-full text-sm rounded-lg border border-gray-300 shadow-sm', 'required': true}}) }}
+            {{ form_label(form.subject, 'Objet', {'label_attr': {'class': 'block mb-2 text-sm font-medium px-2'}}) }}
+            {{ form_widget(form.subject, {'attr': {'class': 'block p-3 w-full text-sm rounded-lg border border-gray-300 shadow-sm', 'required': true}}) }}
             </div>
             <div class="sm:col-span-2">
-                {{ form_label(form.message, 'Message', {'label_attr': {'class': 'block mb-2 text-sm font-medium'}}) }}
-                {{ form_widget(form.message, {'attr': {'class': 'text-black block p-2.5 w-full text-sm rounded-lg shadow-sm border border-gray-300', 'rows': 6}}) }}
+            {{ form_label(form.message, 'Message', {'label_attr': {'class': 'block mb-2 text-sm font-medium px-2'}}) }}
+            {{ form_widget(form.message, {'attr': {'class': 'text-black block p-2.5 w-full text-sm rounded-lg shadow-sm border border-gray-300', 'rows': 6}}) }}
             </div>
             {{ form_widget(form.submit, {'attr': {'class': 'py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-primary-700 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800'}}) }}
         {{ form_end(form) }}
@@ -46,11 +46,11 @@
 
 			</div>
 			<!-- Google Maps Section -->
-			{# <div class="w-full md:w-1/2 md:mt-0">
+			<div class="w-full md:w-1/2 md:mt-0">
 				<iframe width="100%" height="1000" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=1000&amp;hl=en&amp;q=8%20rue%20Tarentaize,%2042100%20Saint-Etienne+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
 					<a href="https://www.gps.ie/">gps systems</a>
 				</iframe>
-			</div> #}
+			</div>
 		</section>
 	</div>
 
