--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -1,58 +1,85 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfilController!{% endblock %}
+{% block title %}
+    Mes Annonces
+{% endblock %}
 
 {% block body %}
+<section>
+    <div class=" mx-auto relative">
+        <div class="shadow-lg">
+            <div class="flex flex-wrap">
+                <!-- Sidebar -->
+                <div class="w-full md:w-1/4 p-4 shadow-lg relative text-white" style="background-color: #0060A7;">
+                    <ul class="space-y-4 profil-items text-white">
+                        <li>
+                            <a href="{{ path('app_profil')}}" class="block md:text-white">Mon profil</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('app_profile_announcement')}}" class="block md:text-white">Mes annonces</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('app_profil_favorite')}}" class="block md:text-white">Mes favoris</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('app_cars_vente')}}" class="block md:text-white">Déposer une annonce</a>
+                        </li>
+                        <li>
+                            <a href="{{path('app_logout')}}" class="block md:text-white">Déconnexion</a>
+                        </li>
+                    </ul>
+                </div>
 
-
-<section class="flex items-center justify-center h-screen bg-gray-100">
-    <div class="bg-white rounded-lg shadow-lg overflow-hidden w-full max-w-4xl">
-        <div class="flex flex-col sm:flex-row items-center p-6 border-b border-gray-200">
-            <div class="relative mr-6 sm:mr-8">
-
-                <img src="{{ asset('assets/img/logo/pdp.png')}}" alt="Photo de profil" class="w-20 h-20 rounded-full">
-                <button class="absolute bottom-0 right-0 bg-white border-2 border-yellow-500 rounded-full w-6 h-6 flex items-center justify-center text-yellow-500 font-bold text-sm">+</button>
-            </div>
-            <div>
-                <h2 class="text-lg font-bold">CA42</h2>
-                <a href="#" class="text-blue-600 text-sm">Accéder à mon profil public</a>
-            </div>
-        </div>
-        <div class="bg-blue-50 p-6 border-b border-gray-200">
-            <p class="text-blue-600">Photo de profil <span class="bg-yellow-500 text-white py-1 px-2 rounded text-xs">nouveau</span></p>
-            <p class="text-blue-600 mt-2">Pour une expérience plus agréable entre membres avec qui vous allez faire de bonnes affaires !</p>
-        </div>
-        <div class="flex flex-wrap">
-            <div class="w-full md:w-1/2 border-b md:border-r border-gray-200 p-6 flex items-center">
-                <div class="text-3xl">📋</div>
-                <div class="ml-4">
-                    <h3 class="font-bold">Annonces</h3>
-                    <p class="text-sm">Gérer mes annonces déposées</p>
-                </div>
-            </div>
-            <div class="w-full md:w-1/2 border-b border-gray-200 p-6 flex items-center">
-                <div class="text-3xl">💶</div>
-                <div class="ml-4">
-                    <h3 class="font-bold">Transactions</h3>
-                    <p class="text-sm">Suivre mes achats et mes ventes</p>
-                </div>
-            </div>
-            <div class="w-full md:w-1/2 border-b md:border-r border-gray-200 p-6 flex items-center">
-                <div class="text-3xl">👤</div>
-                <div class="ml-4">
-                    <h3 class="font-bold">Profil & Espaces</h3>
-                    <p class="text-sm">Modifier mon profil public, accéder à mes avis, aux espaces candidat, locataire et bailleur</p>
-                </div>
-            </div>
-            <div class="w-full md:w-1/2 p-6 flex items-center">
-                <div class="text-3xl">⚙️</div>
-                <div class="ml-4">
-                    <h3 class="font-bold">Paramètres</h3>
-                    <p class="text-sm">Compléter et modifier mes informations privées et préférences</p>
-                </div>
+                <!-- Form -->
+                <form action="#" class="w-full md:w-3/4 p-4" method="POST">
+                    <h1 class="text-xl font-semibold mb-4 block">Mon Profil</h1>
+                    <!-- Civility, Name, Surname -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Civilité :</label>
+                        <select name="civility" class="border rounded w-full py-2 px-3 text-gray-700">
+                            <option>-</option>
+                            <option>Monsieur</option>
+                            <option>Madame</option>
+                        </select>
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Nom :</label>
+                        <input type="text" name="nom" class="border rounded w-full py-2 px-3 text-gray-700" />
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Prénom :</label>
+                        <input type="text" name="prenom" class="border rounded w-full py-2 px-3 text-gray-700" />
+                    </div>
+                    <!-- Phone -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Téléphone :</label>
+                        <input type="text" name="telephone" class="border rounded w-full py-2 px-3 text-gray-700" />
+                    </div>
+                    <!-- Email -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Email :</label>
+                        <div class="flex items-center">
+                            <input type="email" name="email" class="border rounded w-full py-2 px-3 text-gray-700" value="chafiaadssi42@gmail.com"/>
+                    
+                        </div>
+                    </div>
+                    <!-- Password -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Mot de passe :</label>
+                        <a href="#" class="text-blue-500">Modifier le mot de passe</a>
+                    </div>
+                    <!-- Delete Account -->
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Supprimer mon compte :</label>
+                        <a href="#" class="text-red-500">Supprimer</a>
+                    </div>
+                    <!-- Submit Button -->
+                    <div>
+                        <button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded">Enregistrer les modifications</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 </section>
-
 {% endblock %}
