--- a/templates/cars/show.html.twig
+++ b/templates/cars/show.html.twig
@@ -11,7 +11,8 @@
 {% block body %}
 
 	<div class="container mx-auto p-4">
-		<section class="bg-white p-4 rounded-lg shadow-lg">
+		<section
+			class="bg-white p-4 rounded-lg shadow-lg">
 
 			<!-- Car title and images -->
 			<div class="mb-4">
@@ -22,7 +23,7 @@
 				<div class="flex flex-wrap justify-center space-x-4 p-2">
 
 					{% for picture in pictures %}
-			   <img src="{{ asset('assets/img/cars-users/') ~ picture.name }}" alt="{{ picture.name }}" class="w-full sm:w-64 md:w-72 h-full rounded-lg shadow-md mb-2 sm:mb-0">
+						<img src="{{ asset('assets/img/cars-users/') ~ picture.name }}" alt="{{ picture.name }}" class="w-full sm:w-64 md:w-72 h-full rounded-lg shadow-md mb-2 sm:mb-0">
 					{% endfor %}
 
 				</div>
@@ -73,12 +74,18 @@
 					</div>
 				</div>
 
-				<!-- Contact link -->
 				<div class="text-center mt-4">
-					<a href="{{ path('app_chat', {'id': car.id}) }}" style="background-color: #0060A7;" class="btn text-white py-2 px-4 rounded-lg  inline-flex items-center">
-						<i class="fas fa-comments mr-2"></i>
-						Contacter
-					</a>
+					{% if app.user %}
+						<a href="{{ path('app_message_new', {'id': car.id}) }}" style="background-color: #0060A7;" class="btn text-white py-2 px-4 rounded-lg inline-flex items-center">
+							<i class="fas fa-comments mr-2"></i>
+							Contacter
+						</a>
+					{% else %}
+						<a href="{{ path('app_login') }}" style="background-color: #0060A7;" class="btn text-white py-2 px-4 rounded-lg inline-flex items-center">
+							<i class="fas fa-sign-in-alt mr-2"></i>
+							Connectez-vous
+						</a>
+					{% endif %}
 				</div>
 			</div>
 
@@ -91,22 +98,23 @@
 
 
 	 <script>
-	  const swiper = new Swiper(".mySwiper", {
-	    spaceBetween:1 ,
-	    slidesPerView: 3,
-	    freeMode: true,
-	    watchSlidesProgress: true,
-	    loop: true,
-	  });
-	  const swiper2 = new Swiper(".mySwiper2", {
-	    spaceBetween: 10,
-	    navigation: {
-	      nextEl: ".swiper-button-next",
-	      prevEl: ".swiper-button-prev",
-	    },
-	    thumbs: {
-	      swiper: swiper,
-	    },
-	  });
-	</script>
+		//   const swiper = new Swiper(".mySwiper", {
+		//     spaceBetween:1 ,
+		//     slidesPerView: 3,
+		//     freeMode: true,
+		//     watchSlidesProgress: true,
+		//     loop: true,
+		//   });
+		//   const swiper2 = new Swiper(".mySwiper2", {
+		//     spaceBetween: 10,
+		//     navigation: {
+		//       nextEl: ".swiper-button-next",
+		//       prevEl: ".swiper-button-prev",
+		//     },
+		//     thumbs: {
+		//       swiper: swiper,
+		//     },
+		//   });
+		 </script>
+
 {% endblock %}
