--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,15 +58,16 @@
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"/>
 							</svg>
 						</li>
+						{% if app.user %}
 						<li>
 							<a class="text-sm text-gray-400 hover:text-gray-500" href="{{ path('app_cars_vente')}}">Vente</a>
-
 						</li>
 						<li class="text-gray-300">
 							<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewbox="0 0 24 24">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"/>
 							</svg>
 						</li>
+						{% endif %}
 						<li>
 							<a class="text-sm text-gray-400 hover:text-gray-500" href="{{ path('app_ccm')}}">Comment ça marche</a>
 						</li>
@@ -87,9 +88,9 @@
 					</ul>
 					<div class="justify-start flex">
 						{% if app.user %}
-					<a class="lg:inline-block py-2 px-2 text-sm rounded-xl transition" href="{{ path('app_message')}}">
-					<i class="fa-solid fa-comment-dots" style="color: #0060A7; font-size: x-large;"></i>
-					</a>
+							<a class="lg:inline-block py-2 px-2 text-sm rounded-xl transition" style="color: #0060A7;" href="{{ path('app_message')}}">
+							Message
+							</a>
 							<a class="hidden lg:inline-block py-2 px-4 text-sm rounded-xl transition" href="{{ path('app_profil')}}">Profil</a>
 							<a class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 text-sm rounded-xl transition" href="{{ path('app_logout')}}">Déconnexion</a>
 						{% else %}
@@ -134,6 +135,7 @@
 					<div class="mt-auto">
 						<div class="py-6">
 							{% if app.user %}
+								{# <a class="block py-2 px-4 text-sm rounded" href="{{ path('app_message')}}">Message</a> #}
 								<a class="block py-2 px-4 text-sm rounded" href="{{ path('app_profil')}}">Profil</a>
 								<a class="block py-2 px-4 text-sm rounded mt-2" href="{{ path('app_logout')}}">Déconnexion</a>
 							{% else %}
