--- a/templates/message/show.html.twig
+++ b/templates/message/show.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	{# <section class="flex justify-center my-10 items-center">
+	<section class="flex justify-center my-10 items-center">
 		<div class="container mx-auto p-4">
 			<div class="flex flex-col justify-center items-center lg:flex-row">
 				<div class="w-full lg:w-3/4 bg-white p-4 border rounded-lg shadow-lg mt-4 lg:mt-0 flex flex-col">
@@ -48,11 +48,11 @@
 				</div>
 			</div>
 		</div>
-	</section> #}
+	</section>
 {% endblock %}
 
 {# {% block javascripts %}
-	 <script>
+	    <script>
 	document.addEventListener('DOMContentLoaded', function() {
 	    const form = document.getElementById('messageForm');
 	    
@@ -90,5 +90,5 @@
 	        });
 	    });
 	});
-	</script>
-{% endblock %} #}
+	</script>{% endblock %}
+#}
