revoir message lors de l'envoi : Expected argument of type DateTimeImmutable, null given at property path createdAt.

--- a/templates/message/new.html.twig
+++ b/templates/message/new.html.twig
@@ -22,7 +22,7 @@
 								<li class="flex {% if message.sender.username == app.user.username %}justify-end{% else %}justify-start{% endif %}">
 									<div class="max-w-xs">
 										<div class="mt-1 {% if message.sender.username == app.user.username %}bg-blue-100{% else %}bg-gray-100{% endif %} text-gray-800 p-2 rounded-lg inline-block">
-											{{ message.createdAt|date('d/H:i') }}
+											{{ message.createdAt|date("m/d/Y") }}
 											-
 											{{ message.content }}
 										</div>
@@ -31,7 +31,7 @@
 							{% endfor %}
 						</ul>
 					</div>
-					<form id="messageForm" action="{{ path('app_message_new', {'id': receiver.id}) }}" method="POST">
+					<form id="messageForm" action="{{ path('app_message_new', {'id': car.id}) }}" method="POST">
 						<div class="mt-4">
 							<input type="hidden" name="receiver_id" value="{{ receiver.id }}">
 							<div class="flex items-center border rounded-lg overflow-hidden">
